# DS_Homework_05

./: Hw5.ipynb  df_tdf.csv  pyproject.toml
